package com.salfit.model;

public class Karnet {
}
