package com.salfit.model;

public enum RodzajKarnetu {
}
