package com.salfit.model;

public class Trener {
}
